@@ -57,7 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DynamicItemMenuCommand.cs" />
-    <Compile Include="FileUtil.cs" />
+    <Compile Include="FileUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveShortcutsDialog.xaml.cs">
       <DependentUpon>SaveShortcutsDialog.xaml</DependentUpon>
