@@ -1,6 +1,7 @@
 ﻿Keyboard Shortcuts Manager
 
-21-Apr-2018: v1.0.7 - Implemented Import VSK feature.
+21-Apr-2018: v1.0.8 - Removed intermediate UI for Import shortcuts feature.
+20-Apr-2018: v1.0.7 - Implemented Import VSK feature.
 12-Jan-2018: v1.0.6 - Moved DefaultShortcuts vssettings out of top level so it's not discovered by the scanner.
 02-Jan-2018: v1.0.4 - Detects new/updated extensions on startup and kicks off scan.
 27-Dec-2017: v1.0.3 - Includes extension scanning (on demmand). Provides UI for naming saved shortcuts.
